--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,11 +5,13 @@ requires-python = ">=3.13"
 dependencies = [
     "fastapi",
     "uvicorn",
-    "ccxt",
+    "ccxt>=4.5.3",
     "pydantic",
     "pandas>=2.3.2",
     "pyarrow>=21.0.0",
     "filelock>=3.19.1",
+    "jinja2>=3.1.6",
+    "scalar-fastapi>=1.4.0",
 ]
 
 [dependency-groups]
