--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ dependencies = [
     "filelock>=3.19.1",
     "jinja2>=3.1.6",
     "scalar-fastapi>=1.4.0",
+    "python-multipart>=0.0.20",
 ]
 
 [dependency-groups]
